# fchart3

./: .gitignore  CHANGES.rst  MANIFEST.in  PKG-INFO  README  README.md  TODO  TODO.md  pyproject.toml  requirements.txt  setup.py
fchart/: __init__.py  astrocalc.py  cairo.py  constellation.py  deepsky.py  deepsky_catalog.py  deepsky_object.py  fonts.py  graphics_interface.py  label_potential.py  revngc.py  saguaro.py  skymap_engine.py  star_catalog.py  vic.py  widget_mag_scale.py  widget_map_scale.py
fchart3/: __init__.py  all.py  astrocalc.py  base_types.py  cairo.py  composite_star_catalog.py  config_loader.py  configuration.py  constellation.py  deepsky.py  deepsky_catalog.py  deepsky_object.py  dso_highlight_definition.py  geodesic_binfile_reader.py  geodesic_grid.py  geodesic_star_catalog.py  geodesic_star_catalog_gaia.py  graphics_cairo.py  graphics_interface.py  graphics_skia.py  graphics_tikz.py  highlight_definition.py  highlights.py  hnsky_deepsky.py  horizon_landscape.py  htm_binfile_reader.py  htm_grid.py  htm_star_catalog.py  i18n.py  label_potential.py  milkyway.py  milkyway_enhanced.py  mirroring_graphics.py  np_astrocalc.py  outlines_deepsky.py  pgc_deepsky.py  planet.py  precession.py  projection.py  projection_interface.py  (+27 more)
fchart3/astro/: __init__.py  astrocalc.py  np_astrocalc.py
fchart3/cli/: search_object_utils.py
fchart3/data/: default.conf
fchart3/graphics/: __init__.py  graphics_cairo.py  graphics_interface.py  graphics_skia.py  graphics_tikz.py  mirroring_graphics.py
fchart3/htm/: htm.py  htmc.cc  htmc.h  htmc.py  (+2 more)
locale/: base.pot
(+50 files in other folders)
